// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@/components/posters/as-svg.vue > Renders > A working icon initially 1`] = `
<icon-stub
  name="working"
  tabindex="-1"
/>
`;

exports[`@/components/posters/as-svg.vue > Renders > Can show a poster immediatly 1`] = `
<icon-stub
  immediate="true"
  name="working"
  poster="[object Object]"
  tabindex="-1"
/>
`;
